--- a/styles.css
+++ b/styles.css
@@ -17,12 +17,14 @@
 @media (max-width: 675px) {
     .container{
         flex-direction: column;
+        /* align-items: center; */
     }
 
     header{
         text-align: center;
     }
 
+   
 }
 
 main{
@@ -92,12 +94,14 @@ strong{
 }
 
 .subtitle{
-    font-size: 0.88rem;
-    font-weight: 700;
+    font-size: 0.8rem;
+    font-weight: bold;
     font-family: 'Ubuntu', sans-serif;
     color: #1792d2;
     padding: 0;
     margin: 0;
+    margin-top: 2px;
+    letter-spacing: 2px;
     
 }
 
@@ -147,11 +151,8 @@ nav a {
     text-decoration: none;
     text-transform: uppercase;
     color: #707070;
-    font-weight: 700;
+    font-weight: 500;
     padding: .2em;
-    
-
-
 }
 
 nav a:hover,
@@ -164,7 +165,7 @@ footer{
     background: #143774;
     text-align: center;
     color: #fff;
-    padding: 3em 0;
+    padding: 2em 0;
     font-family: 'Ubuntu', sans-serif;
 }
 
